crates/tui/tests/snapshots/render__edit_view_due_scrolled.snap
---
source: crates/tui/tests/render.rs
expression: terminal.backend().to_string()
---
" Edit [1]  Fix the flaky build                                                                                          "
"┌ Title ───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Fix the flaky build                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Status ─────────────────────────────────────────────────────────────┐ ┌ Priority ────────────────────────────────────┐"
"│  in-progress   ready   waiting   blocked   later   none             │ │  A   B   C                                   │"
"└─────────────────────────────────────────────────────────────────────┘ └──────────────────────────────────────────────┘"
"┌ Due ─────────┐ ┌ Project ──────────────────────────────────────────────────┐ ┌ Tags ─────────────────────────────────┐"
"│ 0x or later  │ │ /home/me/code/app                                         │ │ ci                                    │"
"└──────────────┘ └───────────────────────────────────────────────────────────┘ └───────────────────────────────────────┘"
"┌ Description ─────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ The nightly job fails one time in three. Cache.                                                                      │"
"│ Suspect the cache.                                                                                                   │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"Tab/S-Tab row  ↑↓←→ move  Enter next / newline  C-s save  Esc cancel                                                    "
