crates/tui/tests/snapshots/render__edit_view_long_title.snap
---
source: crates/tui/tests/render.rs
expression: terminal.backend().to_string()
---
"┌ Edit [1] ────────────────────────────┐"
"│ Title      flaky build on arm64 too  │"
"│ Status     in-progress               │"
"│ Priority   A                         │"
"│ Due        2026-10-10                │"
"│ Project    /home/me/code/app         │"
"│ Tags       ci                        │"
"│                                      │"
"│ Description ──────────────────────── │"
"│ ree.                                 │"
"│                                      │"
"│                                      │"
"│                                      │"
"│ last                                 │"
"└──────────────────────────────────────┘"
"Tab/S-Tab  ↑↓←→  Enter  C-s  Esc        "
