crates/tui/tests/snapshots/render__edit_view_narrow.snap
---
source: crates/tui/tests/render.rs
expression: terminal.backend().to_string()
---
"┌ Edit [1] ────────────────────────────┐"
"│ Title      Fix the flaky build       │"
"│ Status     in-progress               │"
"│ Priority   A                         │"
"│ Due        2026-10-10                │"
"│ Project    /home/me/code/app         │"
"│ Tags       ci                        │"
"│                                      │"
"│ Description ──────────────────────── │"
"│ The nightly job fails one time in th │"
"│ ree.                                 │"
"│ Suspect the cache.                   │"
"│                                      │"
"│                                      │"
"└──────────────────────────────────────┘"
"Tab/S-Tab  ↑↓←→  Enter  C-s  Esc        "
