crates/tui/tests/snapshots/render__error_message.snap
---
source: crates/tui/tests/render.rs
assertion_line: 569
expression: "screen(&mut model, 100, 12)"
---
"┌ Tasks (5/5) ─────────────────────────────────────────────────────────────────────────────────────┐"
"│IN PROGRESS (1)                                                                                   │"
"│  [ 1] #A Fix the flaky build (due in 4d)  #ci                                                    │"
"│                                                                                                  │"
"│READY (2)                                                                                         │"
"│  [12] #B Review MR !88: paginate the export  #gitlab   #review-request                           │"
"│  [ 3] #C Write the release notes                                                                 │"
"│                                                                                                  │"
"│LATER (1)                                                                                         │"
"│  [ 4] #B Try the new profiler                                                                    │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"no task with id 9                                                                                   "
