crates/tui/tests/snapshots/render__help.snap
---
source: crates/tui/tests/render.rs
assertion_line: 187
expression: "screen(&mut model, 120, 28)"
---
"┌ Tasks (5/5)┌ Keys ─────────────────────────────────────────────────────────────────────────────────────┐─────────────┐"
"│IN PROGRESS │k/Up, j/Down        move the selection                                                     │             │"
"│  [ 1] #A Fi│g/Home, G/End       first / last task                                                      │             │"
"│            │C-u/PgUp, C-d/PgDn  move ten tasks                                                         │             │"
"│READY (2)   │z/Space             fold / unfold the group                                                │             │"
"│  [12] #B Re│/                   filter: text matches titles, #word a status, tag or priority           │             │"
"│  [ 3] #C Wr│Esc                 clear the filter, close the detail or a dialog                         │             │"
"│            │c                   create a task from a title (then t, p to refine)                       │             │"
"│LATER (1)   │t                   set the status (workflow statuses, pick by number)                     │             │"
"│  [ 4] #B Tr│p                   set the priority (A, B, C)                                             │             │"
"│            │l                   log a progress note                                                    │             │"
"│NO STATUS (1│d                   mark done, with an optional final note                                 │             │"
"│  [ 5] #B Ca│e                   edit the task in a form (title, status, priority, due, project, tags)  │             │"
"│            │E                   open the task file in $EDITOR                                          │             │"
"│            │Enter               open a work session here (tasq pick)                                   │             │"
"│            │C-Enter             open it in a new window (tasq pick --detached)                         │             │"
"│            │S-Enter             open it in a new window without switching to it                        │             │"
"│            │s                   run the sources that run by default (tasq sync)                        │             │"
"│            │S                   pick the sources to run: Space toggles, Enter runs                     │             │"
"│            │r                   reload                                                                 │             │"
"│            │Right, Left         show / hide the selected task's detail                                 │             │"
"│            │Tab                 switch between list and detail                                         │             │"
"│            │Enter               in a picker: apply the choice                                          │             │"
"│            │?                   this help                                                              │             │"
"│            │q, C-c              quit                                                                   │             │"
"│            └─────────────────────────────────────────────────────────────────────────── any key closes ┘             │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"j/k  / filter  c new  t status  p prio  l log  d done  e edit  Enter open  s/S sync  ? help  q quit                     "
