crates/tui/tests/snapshots/render__long_lists_scroll_to_the_selection.snap
---
source: crates/tui/tests/render.rs
expression: "screen(&mut model, 80, 12)"
---
"┌ Tasks (30/30) ───────────────────────────────────────────────────────────────┐"
"│  [22] #B Task number 22                                                      │"
"│  [23] #B Task number 23                                                      │"
"│  [24] #B Task number 24                                                      │"
"│  [25] #B Task number 25                                                      │"
"│  [26] #B Task number 26                                                      │"
"│  [27] #B Task number 27                                                      │"
"│  [28] #B Task number 28                                                      │"
"│  [29] #B Task number 29                                                      │"
"│  [30] #B Task number 30                                                      │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"j/k  /  s p l d e  Enter open  S sync  ? help  q quit                           "
