crates/tui/tests/snapshots/render__no_tasks.snap
---
source: crates/tui/tests/render.rs
expression: "screen(&mut model, 100, 12)"
---
"┌ Tasks (0/0) ───────────────────────────────────┐┌ Task ──────────────────────────────────────────┐"
"│No open todos.                                  ││No task selected.                               │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘"
"j/k  / filter  c new  s status  p prio  l log  d done  e edit  Enter open  S sync  ? help  q quit   "
